# CS50

./: .gitignore  CMakeLists.txt  README.md
Week 0 Scratch/: README.md  TicTacToe.sb3
Week 1 C/Cash/: README.md  cash.c
Week 1 C/Credit/: README.md  credit.c
Week 1 C/Hello/: README.md  hello.c
Week 1 C/MarioLess/: README.md  marioless.c
Week 1 C/MarioMore/: README.md  mariomore.c
Week 2 Arrays/Caesar/: README.md
Week 2 Arrays/Readability/: README.md  readability.c
Week 2 Arrays/Scrabble/: README.md  scrabble.c
Week 2 Arrays/Sort/: answers.txt
Week 2 Arrays/Substitution/: README.md  substitution.c
Week 3 Algorithms/Plurality/: README.md  plurality.c
Week 3 Algorithms/Runoff/: README.md  runoff.c
Week 3 Algorithms/Sort/: README.md  answers.txt
Week 3 Algorithms/Tideman/: README.md  tideman.c
Week 4 Memory/FilterLess/: README.md  filterless.c
Week 4 Memory/FilterMore/: README.md  filtermore.c
Week 4 Memory/Recover/: README.md  recover.c
Week 4 Memory/Volume/: README.md  volume.c
Week 5 Data Structures/Inheritance/: README.md  inheritance.c
Week 5 Data Structures/Speller/: README.md  speller.c
Week 6 Python/DNA/: README.md
Week 6 Python/Hello/: README.md  hello.py
Week 6 Python/SentimentalCash/: README.md  sentimentalcash.py
Week 6 Python/SentimentalCredit/: README.md
Week 6 Python/SentimentalMarioLess/: README.md  sentimentalmarioless.py
Week 6 Python/SentimentalMarioMore/: README.md  sentimentalmariomore.py
Week 6 Python/SentimentalReadability/: README.md
Week 7 SQL/Fiftyville/: answers.txt
Week 7 SQL/Songs/: 6.sql  (+2 more)
(+3 files in other folders)
