cmake_minimum_required(VERSION 3.28)
project(CS50 C)

set(CMAKE_C_STANDARD 11)

add_executable(CS50
        "Week 1 C/Hello/hello.c"
        "Week 1 C/Cash/cash.c"
        "Week 1 C/Credit/credit.c"
        "Week 1 C/MarioLess/marioless.c"
        "Week 1 C/MarioMore/mariomore.c"
        "Week 2 Arrays/Scrabble/scrabble.c")
